Added custom view controller for paywall. Fixed polluting of cache when user-context-hash is obsolete

--- a/Resources/views/full/articlePaywall.html.twig
+++ b/Resources/views/full/articlePaywall.html.twig
@@ -25,6 +25,12 @@
 {% endblock %}
 
 {% block content %}
+    {% if hasPaid %}
+        Congrats, you have paid<br/>
+    {%  else %}
+        No money<br/>
+    {%  endif %}
+
     <section class="content-type-article full-view">
         <div class="banner-image">
             <div class="thumbnail text-center">
